<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/magen_david_whatsap"
    android:orientation="vertical"
    tools:context="com.shul.michalizralevitch.shul2.MainActivity">



    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/lib/com.shul2.android">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textColor="@color/colorToolbarText"/>

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        android:layout_weight="3"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/list_background"
            android:layout_margin="16dp"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:src="@drawable/my_search_icon"
                android:layout_gravity="center_vertical"
                />
            <AutoCompleteTextView
                android:id="@+id/autoComplete"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/insertShulNAme"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete|textMultiLine"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                android:textColor="@color/colorText"
                >
                <requestFocus/>
            </AutoCompleteTextView>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp">

            <CheckBox
                android:id="@+id/chkRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkRemember"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_choice"
                android:textColor="@color/colorText"
                android:textSize="18sp"/>


        </LinearLayout>



        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <Button
        android:background="@drawable/costum_button"
        android:layout_width="240dp"
        android:textColor="@color/colorToolbarText"
        android:layout_height="wrap_content"
        android:onClick="btnCreateNewShul"
        android:text="@string/createNewShul"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp" />

</LinearLayout>
