<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">





    <TextView
        android:id="@+id/lblShullName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorText"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/lblAdress"
        android:text="adress"
        android:textColor="@color/colorText"
        android:textIsSelectable="true"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
       />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/txtParasha"
        android:textColor="@color/colorText"
        android:background="@android:color/transparent"
        android:textSize="28sp"
        android:hint="parasha"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
       >
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/txtCantor"
            android:hint="@string/titleHazan"
            android:textColorHint="@color/color_hint"
            android:singleLine="true"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorText"
            android:background="@android:color/transparent"
            android:textSize="30sp"
            android:textStyle="bold" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/txtChoir"
            android:hint="@string/titleChoir"
            android:textColorHint="@color/color_hint"
            android:singleLine="true"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorText"
            android:background="@android:color/transparent"
            android:textSize="25sp"
            android:textStyle="bold" />


    <EditText

        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/txtShalom"
        android:singleLine="true"
        android:hint="@string/shabat_shalom"
        android:textColorHint="@color/color_hint"
        android:textColor="@color/colorText"
        android:background="@android:color/transparent"
        android:textSize="30sp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_horizontal"/>


    <LinearLayout
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:paddingTop="20dp">




</LinearLayout>

</LinearLayout>